Update ClassForNameTest.java